[project]
name = "churn-prediction-baseline"
version = "0.1.0"
description = "Intentionally rough LightGBM baseline for Telco Customer Churn — designed for agent-driven analysis & improvement"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kagglehub>=1.0.0",
    "lightgbm>=4.6.0",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
]
